--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                         <ul class="list-disc list-inside space-y-2 text-gray-700">
                             <li>Git & GitHub</li>
                             <li>VS Code</li>
+                            <li>Docker</li>
+                            <li>Kubernetes</li>
+                            <li>Terraform</li>
+                            <li>Jenkins</li>
                            
                         </ul>
                     </div>
